--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -23,38 +23,16 @@
 			</div>
 		</nav>
 
-		<main class="main">
-			<div class="main__note">
-				<div class="main__note-top">
-					<h2 class="main__note-top-title">Ramen</h2>
-					<button class="main__note-top-btn"><i class="fa-solid fa-x"></i></button>
-				</div>
-				<p class="main__note-text">Pójść na ramen z całą klasą</p>
-			</div>
-			<div class="main__note">
-				<div class="main__note-top">
-					<h2 class="main__note-top-title">Ramen</h2>
-					<button class="main__note-top-btn"><i class="fa-solid fa-x"></i></button>
-				</div>
-				<p class="main__note-text">Pójść na ramen z całą klasą</p>
-			</div>
-			<div class="main__note">
-				<div class="main__note-top">
-					<h2 class="main__note-top-title">Ramen</h2>
-					<button class="main__note-top-btn"><i class="fa-solid fa-x"></i></button>
-				</div>
-				<p class="main__note-text">Pójść na ramen z całą klasą</p>
-			</div>
-		</main>
+		<main class="main"></main>
 
 		<aside class="popup">
 			<h2 class="popup__title">dodaj notatkę</h2>
 			<label class="popup__label">Wybierz kategorię</label>
 			<select id="select" class="popup__select">
 				<option value="0" selected disabled>- wybierz kategorie -</option>
-				<option value="1">Zakupy</option>
-				<option value="2">Ramen</option>
-				<option value="3">Kino</option>
+				<option value="1" data-color="purple">Zakupy</option>
+				<option value="2" data-color="blue">Ramen</option>
+				<option value="3" data-color="green">Kino</option>
 			</select>
 			<label class="popup__label">Wpisz treść notatki</label>
 			<textarea id="message" class="popup__message"></textarea>
